--- a/web/src/less/common.less
+++ b/web/src/less/common.less
@@ -3,6 +3,13 @@
   padding-bottom: @grid-gutter-width;
 }
 
+.content {
+  [class^="icon-"]:before,
+  [class*=" icon-"]:before {
+    margin-right: 0;
+  }
+}
+
 .well,
 .panel-body {
 
